--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,10 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField "String", "WEATHERBIT_KEY", project.property("weatherApi.key")
+        buildConfigField "String", "WEATHERBIT_URL", "\"https://api.weatherbit.io/v2.0/\""
+        buildConfigField "String", "WEATHERBIT_ICON_URL", "\"https://www.weatherbit.io/static/img/icons/\""
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -38,6 +42,26 @@ android {
         dataBinding true
         viewBinding true
     }
+
+    flavorDimensions "version"
+
+    productFlavors {
+        standard {
+            dimension "version"
+
+        }
+        mock {
+            dimension "version"
+            applicationIdSuffix ".mock"
+        }
+    }
+
+    variantFilter { variant ->
+        def names = variant.flavors*.name
+        if (variant.buildType.name == "release" && names.contains("mock")) {
+            setIgnore(true)
+        }
+    }
 }
 
 dependencies {
@@ -49,6 +73,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0'
     implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.8.0"
+    implementation "com.squareup.moshi:moshi-adapters:1.8.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.9.3"
+
 
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -58,7 +86,11 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
 
     def lifecycle_version = "2.2.0"
